python-web-server/tests/http/requests/invalid/001.py
from web_server.errors import NoMoreData

request = NoMoreData
